--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,26 @@
     "name": "serafim/hydrogen",
     "type": "library",
     "license": "MIT",
-    "description": "",
+    "description": "More faster and convenient Doctrine ORM abstraction layer",
+    "keywords": [
+        "collections",
+        "repository",
+        "doctrine",
+        "orm",
+        "optimisation",
+        "relations",
+        "abstraction"
+    ],
+    "support": {
+        "issues": "https://github.com/SerafimArts/Hydrogen/issues",
+        "source": "https://github.com/SerafimArts/Hydrogen"
+    },
+    "authors": [
+        {
+            "name": "Kirill Nesmeyanov",
+            "email": "nesk@xakep.ru"
+        }
+    ],
     "require": {
         "php": ">=7.1",
         "doctrine/orm": "~2.5"
@@ -11,5 +30,18 @@
         "psr-4": {
             "Serafim\\Hydrogen\\": "src/"
         }
-    }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~6.1"
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Serafim\\Hydrogen\\Tests\\": "tests/"
+        }
+    },
+    "config": {
+        "sort-packages": true
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
